[project]
name = "streamdcbot"
version = "0.1.0"
description = "Discord bot with reaction roles, YouTube monitoring, and YouTube music player"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "discord-py>=2.6.4",
    "flask>=3.1.2",
    "PyNaCl>=1.5.0",
    "yt-dlp>=2026.2.4",
]
